# somos-crowd

./: Anchor.toml  README.md  publish.sh
elm/src/: Main.elm
elm/src/Model/: Admin.elm  AlmostCollection.elm  AlmostExistingCollection.elm  Collection.elm  Collector.elm  Creator.elm  Handle.elm  HandleForm.elm  Model.elm  Role.elm  State.elm  StringForm.elm  Uploader.elm  WithCollection.elm
elm/src/Model/Collector/: Collector.elm
elm/src/Model/Creator/: Creator.elm  Existing.elm  New.elm
elm/src/Model/Role/: Listener.elm  Role.elm  Sender.elm
elm/src/Msg/: Admin.elm  Collector.elm  Creator.elm  Js.elm  Msg.elm  Uploader.elm
elm/src/Msg/Collector/: Collector.elm  PurchaseCollection.elm
elm/src/Msg/Creator/: Creator.elm  Existing.elm  New.elm
elm/src/Sub/: Creator.elm  Listener.elm  Sender.elm  Sub.elm  Uploader.elm
elm/src/Sub/Listener/: Listener.elm
elm/src/Sub/Sender/: Sender.elm
elm/src/Util/: Decode.elm
elm/src/View/: Header.elm
elm/src/View/Admin/: Admin.elm
programs/somos-crowd/: Cargo.toml
programs/somos-crowd/src/: lib.rs
programs/somos-crowd/src/ix/: add_new_copy_to_collection.rs  create_collection.rs  create_nft.rs  init_new_creator.rs  mint_new_copy.rs  mod.rs
programs/somos-crowd/src/pda/: authority.rs  creator.rs
web/: index.html
web/js/: main.js  package-lock.json  package.json  sync-idl.sh
web/js/anchor/: config.js  config.ts  get-creator-collections.js  idl.json  init-new-creator.js  util.js  wallet.ts
web/js/phantom/: index.js
web/js/shdw/: shdw.js
web/sass/: custom.scss  package-lock.json
(+27 files in other folders)
