[package]
name = "somos-crowd"
version = "1.0.0"
description = "token-gated media backed by crowd-funding"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "somos_crowd"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
spl-associated-token-account = "1.0.5"
mpl-token-metadata = { version = "1.3.6", features = ["no-entrypoint"] }
